--- a/DhilipTraining/SampleWpfApp/App.xaml
+++ b/DhilipTraining/SampleWpfApp/App.xaml
@@ -2,8 +2,26 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SampleWpfApp"
-             StartupUri="DashBoard.xaml">
+             StartupUri="EmployeeDB.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="28"/>
+            <Setter Property="Background" Value="LightGoldenrodYellow"/>
+            <Setter Property="Foreground" Value="IndianRed"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Background" Value="Beige"/>
+            <Setter Property="Foreground" Value="Brown"/>
+            <Setter Property="FontSize" Value="24"/>
+        </Style>
+        <Style TargetType="Control">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Background" Value="Bisque"/>
+            <Setter Property="Foreground" Value="Brown"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style>
     </Application.Resources>
 </Application>
